--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,6 @@ name: "Deploy to GitHub Pages"
 on:
     push:
         branches:
-            - master
             - main
 
 jobs:
@@ -29,4 +28,4 @@ jobs:
               with:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
                   publish_dir: ./dist
-                  publish_branch: gh-pages
+                  publish_branch: main
