--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist", // here `dist` is the build folder of your project
+    "deploy": "gh-pages -d dist",
     "postdeploy": "echo 'Deployment complete!'"
   },
   "dependencies": {
